fix: fix overflow

--- a/app/styles/sass/_config.scss
+++ b/app/styles/sass/_config.scss
@@ -141,6 +141,10 @@ textarea {
 	resize: none;
 }
 
+section {
+    overflow: hidden;
+}
+
 .container {
 	max-width: 1180px;
 	width: 100%;
